--- a/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
+++ b/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
@@ -25,6 +25,30 @@
     <Filter Include="Source\Main">
       <UniqueIdentifier>{44db30e7-0609-46e7-b1b9-d6642e997054}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Marking">
+      <UniqueIdentifier>{159e730b-3303-475c-938b-21e811b534c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Marking\Items">
+      <UniqueIdentifier>{f188b618-5d3d-4112-a045-fba3e0094dfc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Marking\EditorDialog">
+      <UniqueIdentifier>{d2b342b1-8713-4341-87d7-4da6533e6ab0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\DataSource">
+      <UniqueIdentifier>{0e1e6b50-ba32-4f3c-82e6-094db9115f03}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\DataSource\Items">
+      <UniqueIdentifier>{f41bf490-7d59-47bd-8b86-eaf87dad08c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\DataSource\Items\RandomGenerator">
+      <UniqueIdentifier>{5c71793e-e29d-4a64-af8c-1575875fdceb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\DataSource\Items\ManualControl">
+      <UniqueIdentifier>{412b9d96-f29f-4d69-9c1d-25f2a1955c2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\DataSource\Items\ComPort">
+      <UniqueIdentifier>{cbbcc01c-a853-4855-8717-be43ca0e5e11}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -42,6 +66,60 @@
     <ClCompile Include="GeneratedFiles\qrc_ModuleData.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Source\MarkingContainer.cpp">
+      <Filter>Source\Marking</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_MarkingContainer.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_MarkingContainer.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Marking.cpp">
+      <Filter>Source\Marking\Items</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\MarkingEditorDialog.cpp">
+      <Filter>Source\Marking\EditorDialog</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_MarkingEditorDialog.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_MarkingEditorDialog.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Marking.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_Marking.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\DataSourceContainer.cpp">
+      <Filter>Source\DataSource</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\DataSource.cpp">
+      <Filter>Source\DataSource\Items</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\DSRandomGenerator.cpp">
+      <Filter>Source\DataSource\Items\RandomGenerator</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\DSManualControl.cpp">
+      <Filter>Source\DataSource\Items\ManualControl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\DSComPort.cpp">
+      <Filter>Source\DataSource\Items\ComPort</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_DataSource.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_DataSource.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_DataSourceContainer.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_DataSourceContainer.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\..\Source\ModuleData.h">
@@ -53,6 +131,21 @@
     <CustomBuild Include="..\..\..\Source\ModuleData.qrc">
       <Filter>Resources</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\MarkingContainer.h">
+      <Filter>Source\Marking</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\MarkingEditorDialog.h">
+      <Filter>Source\Marking\EditorDialog</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\Marking.h">
+      <Filter>Source\Marking\Items</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\DataSource.h">
+      <Filter>Source\DataSource\Items</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\DataSourceContainer.h">
+      <Filter>Source\DataSource</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ModuleData_win32.rc">
@@ -62,6 +155,15 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_ModuleData.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\DSRandomGenerator.h">
+      <Filter>Source\DataSource\Items\RandomGenerator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\DSManualControl.h">
+      <Filter>Source\DataSource\Items\ManualControl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\DSComPort.h">
+      <Filter>Source\DataSource\Items\ComPort</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
