--- a/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj
+++ b/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\Source\Chart.cpp" />
     <ClCompile Include="..\..\..\Source\ChartContainer.cpp" />
+    <ClCompile Include="..\..\..\Source\ChartTabs.cpp" />
     <ClCompile Include="..\..\..\Source\DataSource.cpp" />
     <ClCompile Include="..\..\..\Source\DataSourceContainer.cpp" />
     <ClCompile Include="..\..\..\Source\DSComPort.cpp" />
@@ -241,6 +242,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DWIN64 -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_SQL_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtSql" "-I$(QTDIR)\include\QtWidgets"</Command>
     </CustomBuild>
+    <ClInclude Include="..\..\..\Source\ChartTabs.h" />
     <ClInclude Include="..\..\..\Source\DSComPort.h" />
     <ClInclude Include="..\..\..\Source\DSManualControl.h" />
     <ClInclude Include="..\..\..\Source\DSRandomGenerator.h" />
