--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Platfom/ModuleData_win32/Win32
 /Platfom/ModuleData_win32/ModuleData_win32/Debug
 /Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.user
+/Platfom/ModuleData_win32/ModuleData_win32/Release
