Адаптер для данных между источником и приемником

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Platfom/ModuleData_win32/ModuleData_win32/Debug
 /Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.user
 /Platfom/ModuleData_win32/ModuleData_win32/Release
+/Platfom/ModuleData_win32/ModuleData_win32.opensdf
