--- a/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
+++ b/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
@@ -67,11 +67,11 @@
     <Filter Include="Source\Chart\ChartWidget\CustomPlot">
       <UniqueIdentifier>{5581fb4a-02e0-4f7f-bd8a-f0310b10a2fe}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\DataSource\Adapter">
-      <UniqueIdentifier>{c535e1b2-d290-442f-babc-82311cc10d95}</UniqueIdentifier>
+    <Filter Include="Source\DataProxy">
+      <UniqueIdentifier>{db319f61-436d-4469-99a7-4095b568de51}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\DataSource\Adapter\Adapter_chart">
-      <UniqueIdentifier>{6143e077-a794-4a41-8965-6db52ea7446d}</UniqueIdentifier>
+    <Filter Include="Source\DataProxy\CollectionProxy">
+      <UniqueIdentifier>{357765d4-b1b9-477a-b232-f1fe1e008106}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -183,11 +183,11 @@
     <ClCompile Include="GeneratedFiles\Release\moc_qcustomplot.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Source\Adapter.cpp">
-      <Filter>Source\DataSource\Adapter</Filter>
+    <ClCompile Include="..\..\..\Source\DataProxy.cpp">
+      <Filter>Source\DataProxy</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Source\Adapter_chart.cpp">
-      <Filter>Source\DataSource\Adapter\Adapter_chart</Filter>
+    <ClCompile Include="..\..\..\Source\CollectionProxy.cpp">
+      <Filter>Source\DataProxy\CollectionProxy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -249,11 +249,11 @@
     <ClInclude Include="..\..\..\Source\ChartTabs.h">
       <Filter>Source\Chart\ChartTabs</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Source\Adapter.h">
-      <Filter>Source\DataSource\Adapter</Filter>
+    <ClInclude Include="..\..\..\Source\DataProxy.h">
+      <Filter>Source\DataProxy</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Source\Adapter_chart.h">
-      <Filter>Source\DataSource\Adapter\Adapter_chart</Filter>
+    <ClInclude Include="..\..\..\Source\CollectionProxy.h">
+      <Filter>Source\DataProxy\CollectionProxy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
