--- a/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
+++ b/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
@@ -88,6 +88,12 @@
     <Filter Include="Source\Chart\ChartWidget\TimeTicker">
       <UniqueIdentifier>{e77f7ce9-5e5d-4511-940a-f80b713cbbfd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Chart\ChartWidget\Mark">
+      <UniqueIdentifier>{e52ef27f-5c93-4e25-a818-6209e72c1c11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Chart\ChartWidget\MarkPlot">
+      <UniqueIdentifier>{756b2d0c-a08b-43d4-8314-08e86980b53f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -222,12 +228,6 @@
     <ClCompile Include="GeneratedFiles\Release\moc_DSManualControlDialog.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_Mark.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_Mark.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Source\DSComPortDialog.cpp">
       <Filter>Source\DataSource\Items\ComPort\Widget</Filter>
     </ClCompile>
@@ -246,11 +246,20 @@
     <ClCompile Include="GeneratedFiles\Release\moc_SerialPort.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Source\Mark.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Source\TimeTicker.cpp">
       <Filter>Source\Chart\ChartWidget\TimeTicker</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Mark.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_Mark.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Mark.cpp">
+      <Filter>Source\Chart\ChartWidget\Mark</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\MarkPlot.cpp">
+      <Filter>Source\Chart\ChartWidget\MarkPlot</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -303,7 +312,10 @@
       <Filter>Source\Utils\SerialPort</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\..\Source\Mark.h">
-      <Filter>Generated Files</Filter>
+      <Filter>Source\Chart\ChartWidget\Mark</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\MarkPlot.h">
+      <Filter>Source\Chart\ChartWidget\MarkPlot</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
